fix: adjust header profile margin and update CTA spacing for tablet view

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -72,7 +72,7 @@ header {
 /* MEDIA QUERIES (tablets) */
 @media screen and (max-width: 600px) {
     .header__profile {
-        margin-top: 3rem;
+        margin-top: 1rem;
         width: 14rem;
         height: 17rem;
         max-width: 60%;
@@ -84,7 +84,7 @@ header {
     }
 
     .header__cta {
-        margin-bottom: 3rem;
+        /* margin-bottom: 3rem; */
         gap: 1rem;
     }
 
